<resources>
    <string name="app_name">Track Expenditures</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_field_hint_email">Email</string>
    <string name="text_view_login">Login</string>
    <string name="text_view_no_account">don\'t have account</string>
    <string name="create_account">create account</string>
    <string name="Name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">login</string>
</resources>